--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -39,7 +39,7 @@
 
                                             </div>
                                             <div class="col-md-12 form-group">
-                                                <input type="tel" class="form-control" name="mobile" placeholder="Mobile Number" onblur="validateMobile()" >
+                                                <input type="tel" class="form-control" name="mobile" placeholder="Mobile Number" onblur="validateMobile()" maxlength="10">
                                                 <div id="mnoError" class="error-message text-danger"></div>
                                            </div>
                                             <!-- <div class="col-md-12 form-group">
