--- a/views/users/addAddress.ejs
+++ b/views/users/addAddress.ejs
@@ -86,7 +86,7 @@
             <div class="card-body ">
               <div class="d-flex flex-column align-items-center text-center">
                 <img
-                  src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                  src="/images/person-circle.svg"
                   alt="user"
                   class="rounded-circle"
                   width="100"
