--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -119,11 +119,12 @@
             <div class="card-body ">
               <div class="d-flex flex-column align-items-center text-center">
                 <img
-                  src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                  src="/images/person-circle.svg"
                   alt="user"
                   class="rounded-circle"
                   width="100"
                 />
+              
                 <div class="mt-3">
                   <h5 style="margin-top: 5px;"><%=user.name%></h5>
   
