--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -77,7 +77,7 @@
                     <form id="checkout-form">
                         <div class="col-md-10" >
 
-                                <% if(address.addresses.length>0){%>
+                                <% if( address && address.addresses && address.addresses.length>0){%>
                                 <% address.addresses.forEach((address)=>{%>
 
                                 <!-- Address Details -->
