--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -62,7 +62,7 @@
       margin-top: 5px;
     }
   </style>
-
+<!-- navBar -->
 <div class="container">
     <div class="main-body">
       <nav aria-label="breadcrumb" class="main-breadcrumb">
@@ -76,7 +76,9 @@
           </li>
         </ol>
       </nav>
+<!-- end_navBar -->
 
+    <!-- sadiBar -->
       <div class="row gutters-sm">
         <div class="col-md-4 mb-3">
           <div class="card">
@@ -120,14 +122,18 @@
             </h5>
                 <!-- <span class="text-secondary">bootdey</span> -->
               </li>
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-              >
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
               <h5 class="mb-0">
                 <div class='fas fa-tag'></div><a href="/address"> Manage Address</a>
             </h5>
                 <!-- <span class="text-secondary">@bootdey</span> -->
               </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h5 class="mb-0">
+                  <div class='fas fa-key'></div><a href="#"> Change Password</a>
+              </h5>
+                  <!-- <span class="text-secondary">@bootdey</span> -->
+                </li>
               <li
                 class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
               >
@@ -147,6 +153,8 @@
             </ul>
           </div>
         </div>
+<!-- end_sadiBar -->
+
         <div class="col-md-8">
           <div class="card mb-3">
             <div class="card-body">
@@ -342,6 +350,25 @@
               </div>
             </div>
           </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
