--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -23,11 +23,11 @@
 </head>
 
 <body class="bg-gray-200">
-  <div class="container position-sticky z-index-sticky top-0">
+  <!-- <div class="container position-sticky z-index-sticky top-0">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12"> -->
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+        <!-- <nav class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid ps-2 pe-0">
             <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="#">
               Material Dashboard 
@@ -52,8 +52,8 @@
                     <i class="fa fa-user opacity-6 text-dark me-1"></i>
                     Profile
                   </a>
-                </li>
-                <li class="nav-item">
+                </li> -->
+                <!-- <li class="nav-item">
                   <a class="nav-link me-2" href="#">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
                     Sign Up
@@ -65,19 +65,19 @@
                     Sign In
                   </a>
                 </li>
-              </ul>
+              </ul> -->
               <!-- <ul class="navbar-nav d-lg-block d-none">
                 <li class="nav-item">
                   <a href="https://www.creative-tim.com/product/material-dashboard" class="btn btn-sm mb-0 me-1 bg-gradient-dark">Free download</a>
                 </li>
               </ul> -->
-            </div>
+            <!-- </div>
           </div>
-        </nav>
+        </nav> -->
         <!-- End Navbar -->
-      </div>
+      <!-- </div>
     </div>
-  </div>
+  </div> -->
   <main class="main-content  mt-0">
     <div class="page-header align-items-start min-vh-100" style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');">
       <span class="mask bg-gradient-dark opacity-6"></span>
