--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -69,6 +69,7 @@
 
     .dropdown-toggle {
       cursor: pointer;
+ 
     }
 
     .dropdown-menu {
@@ -243,7 +244,7 @@
 
                     
                     <div class="dropdown">
-                        <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown">
+                        <div type="button" class="dropdown-toggle" data-bs-toggle="dropdown" style="background-color: #ffffff; padding: 10px;">
                           <i class="fas fa-ellipsis-v"></i> 
                         </div>
                         <ul class="dropdown-menu">
