--- a/views/users/forget-password.ejs
+++ b/views/users/forget-password.ejs
@@ -1,6 +1,7 @@
 
 
-<%-include('../layout/header.ejs') %>
+<%- include('../layout/header.ejs') %>
+<%- include('../layout/navigation.ejs') %>
 
 <!-- NEWSLETTER -->
 <div id="newsletter" class="section">
