upto_change_password

--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -114,6 +114,7 @@
         </ol>
       </nav>
 
+      <!-- sadiBar -->
       <div class="row gutters-sm">
         <div class="col-md-4 mb-3">
           <div class="card">
@@ -125,12 +126,8 @@
                   class="rounded-circle"
                   width="100"
                 />
-              
-                <div class="mt-3">
+                <div class="mt-3 ">
                   <h5 style="margin-top: 5px;"><%=user.name%></h5>
-  
-                  <!-- <button class="btn btn-primary">Follow</button> -->
-                  <!-- <button class="btn btn-outline-primary">Message</button> -->
                 </div>
               </div>
             </div>
@@ -161,14 +158,18 @@
             </h5>
                 <!-- <span class="text-secondary">bootdey</span> -->
               </li>
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
-              >
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
               <h5 class="mb-0">
                 <div class='fas fa-tag'></div><a href="/address"> Manage Address</a>
             </h5>
                 <!-- <span class="text-secondary">@bootdey</span> -->
               </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                <h5 class="mb-0">
+                  <div class='fas fa-key'></div><a href="/changePassword"> Change Password</a>
+              </h5>
+                  <!-- <span class="text-secondary">@bootdey</span> -->
+                </li>
               <li
                 class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
               >
@@ -185,9 +186,10 @@
             </h5>
                 <!-- <span class="text-secondary">bootdey</span> -->
               </li>
-            
+            </ul>
           </div>
         </div>
+<!-- end_sadiBar -->
 
         <div class="col-md-8">
             <div class="card mb-3">
