--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -130,7 +130,7 @@
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                 <h5 class="mb-0">
-                  <div class='fas fa-key'></div><a href="#"> Change Password</a>
+                  <div class='fas fa-key'></div><a href="/changePassword"> Change Password</a>
               </h5>
                   <!-- <span class="text-secondary">@bootdey</span> -->
                 </li>
