--- a/views/users/changePassword.ejs
+++ b/views/users/changePassword.ejs
@@ -1,6 +1,11 @@
 <%- include('../layout/header.ejs') %>
 <%- include('../layout/navigation.ejs') %>
-
+<style>
+  .newsletter form .input{
+    border-radius: 5px;
+    font-size: medium;
+  }
+</style>
 
 <!-- NEWSLETTER -->
 <div id="newsletter" class="section">
@@ -22,13 +27,15 @@
                 <div class="col-sm-12" style="padding: 15px;">
                     <label>Current Password</label>
                     <input class="input" type="password" name="currentpassword" placeholder="Enter Current Password">
-                    <span id="error-currentpassword" style="color: red;"></span>
-                </div>
-                <div class="col-sm-12" style="padding: 15px;">
+                  </div>
+                  <span id="error-currentpassword" style="color: red;"></span>
+
+                  <div class="col-sm-12" style="padding: 15px;">
                     <label>New Password</label>
                     <input class="input" type="password" name="newpassword" placeholder="Enter Your New Password" required>
                     <span id="error-newpassword" style="color: red;"></span>
                 </div>
+
                 <div class="col-sm-12" style="padding: 15px;">
                     <label>Confirm Password</label>
                     <input class="input" type="password" name="confirmpassword" placeholder="Enter Your Confirm Password">
